correct align in slider

--- a/less/blocks/footer/footer.less
+++ b/less/blocks/footer/footer.less
@@ -1,6 +1,6 @@
 .footer {
   height: 82px;
-  padding-top: 0.5em;
+  padding: 1em 0;
   background: #4c4c4c;
   text-align: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
